--- a/src/frontend/src/components/people/people-list.style.scss
+++ b/src/frontend/src/components/people/people-list.style.scss
@@ -57,7 +57,8 @@
                 height: 30px;
                 padding: 10px;
                 border-radius: 50%;
-                background-color: #ccc;
+                background-color: #34ccdd;
+                color: #fff;
                 margin-right: 20px;
                 text-align: center;
                 font-size: 24px;
@@ -67,16 +68,21 @@
             .info {
                 .name {
                     display: inline-block;
-                    font-size: 20px;
+                    font-size: 24px;
                     font-weight: 500;
+                    margin-top: 10px;
+
+                    a {
+                        color: #5736a1;
+                    }
                 }
     
                 .other-info {
                     display: flex;
                     span {
                         margin-right: 40px;
-                        margin-top: 5px;
-                        font-size: 14px;
+                        margin-top: 0px;
+                        font-size: 12px;
                     }
                 }
             }
