--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -7,3 +7,7 @@ body {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+a {
+    text-decoration: none;
+}
