--- a/src/frontend/src/components/people/people-list.style.scss
+++ b/src/frontend/src/components/people/people-list.style.scss
@@ -2,35 +2,6 @@
     display: flex;
     flex-direction: column;
 
-    .search-wrapper {
-        width: 100%;
-
-        form {
-            .search-form {
-                width: 100%;
-                margin: auto;
-                display: flex;
-    
-                input {
-                    width: 80%;
-                    padding: 20px 30px 15px 30px;
-                    font-size: 20px;
-                    font-weight: normal;
-                    // box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
-                    border: 1px solid transparent;
-                }
-                button {
-                    width: 20%;
-                    border-radius: 0px;;
-                    background-color: #000;
-                    color: #fff;
-                    border: none;
-                    font-size: 18px;
-                }
-            }
-        }
-    }
-
     .sub-title {
         font-size: 18px;
     }
@@ -47,11 +18,11 @@
         display: flex;
         flex-direction: column;
         margin-top: 10px;
-        margin-bottom: 60px;
+        margin-bottom: 5px;
         background-color: #fff;
         // box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
 
-        .individual-details {
+        .person-details {
             display: flex;
             flex-direction: row;
             border-bottom: thin solid #f2f2f2;
