--- a/src/frontend/src/components/pagination/pagination.styles.scss
+++ b/src/frontend/src/components/pagination/pagination.styles.scss
@@ -1,9 +1,15 @@
 nav {
   width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   background-color: #fff;
   margin-bottom: 60px;
+
+  div {
+    font-size: 20px;
+    color: #5736a1;
+    margin: 20px 20px;
+  }
 
   ul {
     display: flex;
